--- a/category-desktop-support-utilities.html
+++ b/category-desktop-support-utilities.html
@@ -45,7 +45,7 @@
   <div class="contentBox h100">
   <div>
   <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Utilities and Tools</h1>
-  <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">.</p>
+  <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Here you can find different software tools and utilities that we provide you to help your work and development.</p>
     </div>
 </div>
 </div>
