--- a/lets-connect-my-social-medias.html
+++ b/lets-connect-my-social-medias.html
@@ -83,7 +83,7 @@
 <img src="images/icons/Group-icon.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Chat Room<br><span><a href="https://www3schw.ools.com" target="_blank">Facebook Group</a></span></h3>
+<h3>Chat Room<br><span><a href="https://www.facebook.com/groups/389795508500951" target="_blank">Facebook Group</a></span></h3>
 </div>
 </div>
 </div>
@@ -104,7 +104,7 @@
 <img src="images/icons/Github-icon.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>GitHub<br><span><a href="specialize-desktop-devices-windows-tips-and-tricks.html" class="specializes-url" target="_blank">EvilGeniux</a></span></h3>
+<h3>GitHub<br><span><a href="https://github.com/theevilgeniux" class="specializes-url" target="_blank">EvilGeniux</a></span></h3>
 </div>
 </div>
 </div>
