--- a/index.html
+++ b/index.html
@@ -221,7 +221,23 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 </div>
 </div>
 </section>
-
+<footer>
+<div class="container">
+<div class="row">
+<div class="col-sm-12">
+<ul class="sci">
+<li><a href="https://www.facebook.com/OFFICIALLEFTINTHEDARK/"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--fontawesome icon-->
+<li><a href="#"><i class="fa fa-google-plus"></i></a></li><!--fontawesome icon-->
+<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="#"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+</ul>
+<p class="cpryt">
+<span class="copyright">&copy;</span>Copyright 2019 | Evil Geniux. <a  href="#"> Terms and Conditions applied. </a></p>
+</div>
+</div>
+</div>
+</footer>
 <script src="main.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
