--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ I'm not Talented, I'm skilled.</p>
 <div class="row">
 <div class="offset-sm-2 col-sm-8">
 <div class="headerText text-center">
-<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Categories</h2>
+<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><BR/><BR/>Categories</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><b></b>
 </p>
 </div>
