new tutorial added

--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -224,6 +224,64 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 
 
 
+<div class="col-sm-4">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="imgBx">
+<img src="images/device-images/HUAWEI Y511 U30-EVILGENIUX.png" class="img-fluid">
+</div>
+<div class="content">
+
+
+<h3>Huawei Y511-U30<br><span><a href="#myModal16" class="openModal">Hard-reset</a></span></h3>
+</div>
+</div>
+</div>
+<div id="myModal16" class="modal">
+    <div class="modal-content">
+    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+	<div class="modal-body">
+	<center><img src="images/device-images/How To Hard-Reset Wipe Data on Huawei Y511 U30 .jpg" width="40%" class="img-modal"></center><br/>
+    <p class="modal-h">How to Hard Reset Huawei Y511-U30</p>
+    <p class="modal-p">
+Is your Android Smartphone slow, freezing, not responsive, responding incorrectly, or you can’t remember the phones password? You’re in luck! There is still a pretty powerful option available, and that is to perform a hard reset, also known as an alternate reset, on the device.
+<BR/><BR/>
+Before we begin… If you are still able to access the setting on your device and navigate the phone then you might be more interested in reading How to backup and reset an Android phone, which goes through the process of doing a full backup and then performing a Factory Data Reset through the phones settings.
+<BR/><BR/>
+
+To boot into recovery mode, make sure that the device is powered off, then follow these instructions:<BR/>
+1. Turn off the phone<BR/>
+2. Press and hold the power button for 3 seconds<BR/>
+3. Then immediately depress it, then hold both Volume Up key and Volume Down simultaneously until the Android system recover screen appears. <BR/>
+4. Use the Volume Down key to highlight the “wipe data/factory reset” option and then use the Power button to make the selection.<BR/>
+5. Done <BR/>
+
+
+
+
+
+
+
+<BR/><BR/>
+DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
+<BR/>Go to myTutorial for guidance: <a href="https://youtu.be/8M0hLOPW_D4" target="_blank"><i class="fa fa-youtube-play"></i></a>
+		<br/><br>
+<b>Terms of Service</b><br/>
+<ul>
+<li>No Hacking - No Carding Tools - No Spams</li>
+<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li>Dont forget to support Evil Genius!</li>
+</ul>
+
+</p>
+	 </div>
+	 <div class="modal-footer"><h3>End of the article</h3></div>
+	 </div>
+</div>
+
+
+
+
+
 
 
 
