--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -152,8 +152,6 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <img src="images/device-images/A6.png" class="img-fluid">
 </div>
 <div class="content">
-
-
 <h3>Samsung A6 Tab<br><span><a href="#myModal3" class="openModal">FRP Remove </a></span></h3>
 </div>
 </div>
@@ -327,8 +325,64 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 	 </div>
 </div>
 
+
+
+
+
+
+</div>
+<div class="row">
+<div class="col-sm-4">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="imgBx">
+<img src="images/device-images/samungj260f-evilgeniux-bypass.png" class="img-fluid">
+</div>
+<div class="content">
+<h3>Samsung J2 Core<br><span><a href="#myModal3" class="openModal">FRP Remove </a></span></h3>
+</div>
+</div>
+</div>
+<div id="myModal3" class="modal">
+    <div class="modal-content">
+    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+	<div class="modal-body">
+	<center><img src="images/device-images/j260f frp bypass.jpg" width="40%" class="img-modal"></center><br/>
+    <p class="modal-h">Remove Previous Google Account on Samsung J2 Core</p>
+    <p class="modal-p">I'm going to show you how you can remove Google Factory Reset Protection on Android 8.1.0 |. This Happens a lot if you have tried to hard-reset your mobile with combination keys.
+<BR/><BR/>Follow my steps carefully in order to succeed. <BR/><BR/>
+<b>You going to need:</b> <BR/>
+- Laptop/PC
+- USB Cable
+- An Internet Connection
+<BR/><BR/>
+DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
+<BR/>Go to myTutorial: <a href="https://youtu.be/wHJrp5ne_5A" target="_blank"><i class="fa fa-youtube-play"></i></a>
+		<br/><br>
+<b>Terms of Service</b><br/>
+<ul>
+<li>No Hacking - No Carding Tools - No Spams</li>
+<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li>Dont forget to support Evil Genius!</li>
+</ul>
+</p>
+	
+	 </div>
+	 <div class="modal-footer"><h3>End of the article</h3></div>
+	 </div>
+
+
+
+
+
+
+
+
+
+
+
 </div>
 
+</div>
 
 
 
