--- a/lets-connect-my-social-medias.html
+++ b/lets-connect-my-social-medias.html
@@ -76,6 +76,18 @@
 </div>
 </div>
 </div>
+
+<div class="col-sm-4">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="imgBx">
+<img src="images/icons/Group-icon.png" class="img-fluid">
+</div>
+<div class="content">
+<h3>Chat Room<br><span><a href="https://www.facebook.com/groups/theevilgeniux/" target="_blank">Facebook Group</a></span></h3>
+</div>
+</div>
+</div>
+
 <div class="col-sm-4">
 <div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
 <div class="imgBx">
