--- a/category-desktop-support-operating-systems.html
+++ b/category-desktop-support-operating-systems.html
@@ -102,7 +102,7 @@ Windows 10 PRO x86/x64 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -170,7 +170,7 @@ Windows 8.1 Pro VL x64 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -236,7 +236,7 @@ Windows 7 PRO SP1 x64 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -306,7 +306,7 @@ Windows 7 SP1 All-In-One x86/x64 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -382,7 +382,7 @@ Kali Linux 2019.1 also includes updated packages for theHarvester, DBeaver, and 
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -464,7 +464,7 @@ Linux Mint 19.1 - Xfce<br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -523,7 +523,7 @@ Ubuntu 18.10 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -575,7 +575,7 @@ macOS Mojave DMG:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -630,7 +630,7 @@ Android Oreo ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -751,7 +751,7 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/officalevilgenius/"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="https://fb.me/theevilgeniux.0"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-twitter"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-google-plus"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
