--- a/lets-connect-my-social-medias.html
+++ b/lets-connect-my-social-medias.html
@@ -94,7 +94,7 @@
 <img src="images/icons/facebook-like-icon-png-transparent-background-5.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Facebook<br><span><a href="https://www.facebook.com/officalevilgenius/" target="_blank">Follow my page</a></span></h3>
+<h3>Facebook<br><span><a href="https://fb.me/theevilgeniux.0" target="_blank">Follow my page</a></span></h3>
 </div>
 </div>
 </div>
