--- a/category-desktop-support-os-windows-activators.html
+++ b/category-desktop-support-os-windows-activators.html
@@ -111,7 +111,7 @@ It is also known as the Office 2010 Toolkit and EZ-Activator over the internet. 
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -172,7 +172,7 @@ KMS activation only lasts for 180 days after which, it must be activated again. 
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -244,7 +244,7 @@ Activating Windows and Microsoft Office with Windows Loader<BR/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -357,7 +357,7 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/officalevilgenius/"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="https://fb.me/theevilgeniux.0"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-twitter"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-google-plus"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
