--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -88,7 +88,7 @@
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 	</p>
@@ -129,7 +129,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 
@@ -171,7 +171,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -209,7 +209,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -266,7 +266,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 
@@ -315,7 +315,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 
@@ -361,7 +361,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -473,7 +473,7 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/OFFICIALLEFTINTHEDARK/"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="https://fb.me/theevilgeniux.0"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-twitter"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-google-plus"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
