--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -117,7 +117,7 @@
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -325,7 +325,7 @@
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -463,7 +463,7 @@
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -532,7 +532,7 @@ How to Install :<br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -588,7 +588,7 @@ GeniuXMusic APK <b>11.5MB</b> <br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -651,7 +651,7 @@ XHAREit	 v3.8.18 APK: <b>6MB</b> <br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -715,7 +715,7 @@ RootXplore Modded 4.2.1 APK: <b>6MB</b> <br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support Evil Genius!</li>
 </ul>
 </p>
@@ -839,7 +839,7 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/officalevilgenius/"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="https://fb.me/theevilgeniux.0"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-twitter"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-google-plus"></i></a></li><!--fontawesome icon-->
 <li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
