--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -338,11 +338,11 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <img src="images/device-images/samungj260f-evilgeniux-bypass.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Samsung J2 Core<br><span><a href="#myModal3" class="openModal">FRP Remove </a></span></h3>
+<h3>Samsung J2 Core<br><span><a href="#myModal222" class="openModal">FRP Remove </a></span></h3>
 </div>
 </div>
 </div>
-<div id="myModal3" class="modal">
+<div id="myModal222" class="modal">
     <div class="modal-content">
     <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
@@ -351,12 +351,12 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
     <p class="modal-p">I'm going to show you how you can remove Google Factory Reset Protection on Android 8.1.0 |. This Happens a lot if you have tried to hard-reset your mobile with combination keys.
 <BR/><BR/>Follow my steps carefully in order to succeed. <BR/><BR/>
 <b>You going to need:</b> <BR/>
-- Laptop/PC
-- USB Cable
+- Laptop/PC<BR/>
+- USB Cable<BR/>
 - An Internet Connection
 <BR/><BR/>
 DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
-<BR/>Go to myTutorial: <a href="https://youtu.be/wHJrp5ne_5A" target="_blank"><i class="fa fa-youtube-play"></i></a>
+<BR/>Go to myTutorial: <a href="https://youtu.be/2318mVvj6Tk" target="_blank"><i class="fa fa-youtube-play"></i></a>
 		<br/><br>
 <b>Terms of Service</b><br/>
 <ul>
