UPDATED SOCIAL URL

--- a/Specialize-web-developers-online-coder-39-html-iso-language-codes.html
+++ b/Specialize-web-developers-online-coder-39-html-iso-language-codes.html
@@ -2071,14 +2071,15 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://fb.me/theevilgeniux.0"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--fontawesome icon-->
-<li><a href="#"><i class="fa fa-google-plus"></i></a></li><!--fontawesome icon-->
-<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
-<li><a href="#"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
+<li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+
 </ul>
 <p class="cpryt">
-<span class="copyright">&copy;</span>Copyright 2019 | Evil Geniux. <a  href="#"> Terms and Conditions applied. </a></p>
+<span class="copyright">&copy;</span>Copyright 2019 | Processing was initiated and developed by Evidence Maphutha. <BR/><a style="color:white"> Terms and Conditions applied. </a></p>
 </div>
 </div>
 </div>
