--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -563,6 +563,57 @@ This way You can easily Update Intel HD Graphics Driver in Windows 7,8,10.
 </div>
 <!-----------------------------------END OF TWO ROWS----------------------------------------->
 
+<!-----------------------------------TWO ROWS----------------------------------------->
+<div class="row">
+
+<div class="col-sm-6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="blogpost">
+<div class="imgBx">
+<img src="images/desktop-images/DirectX11-evilgeniux.jpg" class="img-fluid">
+</div>
+<div class="content">
+<h1>Tweak: Install DirectX 11 Offline </h1>
+<p>Having problems with your DirectX setup? Instructions mentioned in this post show how to Install..</p>
+<button class="btn btnD2" href="#myModal223">Read More</button>
+<div class="clearfix"></div>
+</div>
+</div>
+</div> 
+<div id="myModal223" class="modal">
+    <div class="modal-content">
+	<div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+      <div class="modal-body">
+	  <center><img src="images/desktop-images/DirectX11-evilgeniux.jpg" width="40%" class="img-modal"></center>
+	  <p class="modal-h"><br/>Tweak: Install DirectX 11 Offline</p>
+      <p class="modal-p">
+Having problems with your DirectX setup? We provide DirectX offline installers for reinstallation.<br/>
+	  Instructions mentioned in this post show how to Install or Update DirectX 11 in Windows 7,8,10. No Internet needed.
+	  
+	  <br/><br/>
+	<b>Begin downloading</b><br/>
+	DirectX 11 Offline Installer 
+	<br/>File size: 96.0MB <a href="https://mega.nz/#!FAIXgCxD!ni0ntdR78ce0jLhqDNvmQFWKWm9F-LlEEFJyy6iRVqA" target="_blank"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg></a>
+<br/><br/>
+	  
+	Open myTutorial for installation guides: <a href="https://youtu.be/7IseoqWmCaA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+			<br/><br>
+<b>Terms of Service</b><br/>
+<ul>
+<li>No Hacking - No Carding Tools - No Spams</li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li>Dont forget to support Evil Genius!</li>
+</ul></p>
+
+	  </div>
+	  <div class="modal-footer"><h3>End of the article</h3></div>
+	  </div>
+</div>
+</div>
+<!-----------------------------------END OF TWO ROWS----------------------------------------->
+
+
+
+
 
 
 
