--- a/Specialize-web-developers-online-coder-11-html-text-links.html
+++ b/Specialize-web-developers-online-coder-11-html-text-links.html
@@ -15,7 +15,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 <div class="container">
-  <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo"></a>
+  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -249,7 +249,7 @@ Following example makes use of &lt;base&gt; tag to specify base URL and later we
 	
    <body>
       <p>Click following link</p>
-      <a href = "index.html" target = "_blank">HTML Tutorial</a>
+      <a href = "https://theevilgeniux.github.io/" target = "_blank">HTML Tutorial</a>
    </body>
 	
 </html>
@@ -265,7 +265,7 @@ Following example makes use of &lt;base&gt; tag to specify base URL and later we
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 This will produce the following result, where you can click on the link generated <b>HTML Tutorial</b> to reach to the HTML tutorial.
 <br/>
-Now given URL &lt;a href = "index.html" is being considered as &lt;ahref = "http://www.evilgenius/index.html"
+Now given URL &lt;a href = "https://theevilgeniux.github.io/" is being considered as &lt;ahref = "http://www.evilgenius/https://theevilgeniux.github.io/"
 </p>
 </div>
 </div>
@@ -337,7 +337,7 @@ Save the following in test.htm and open it in any web browser to see how <b>link
 	
    <body alink = "#54A250" link = "#040404" vlink = "#F40633">
       <p>Click following link</p>
-      <a href = "index.html" target = "_blank" >HTML Tutorial</a>
+      <a href = "https://theevilgeniux.github.io/" target = "_blank" >HTML Tutorial</a>
    </body>
    
 </html>
@@ -474,7 +474,7 @@ while(read(FILE, $buffer, 100)){
 <div>
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">About me</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-My name is Evidence Maphutha, I am a young aspirant <i>Front-End Developer,</i> alternatively as well as an <i>IT Support.</i><br/>
+My name is Evidence Maphutha, I am a young aspirant <i>Front-End Developer,</i> as well as an <i>IT Support Technician.</i><br/>
 Evil Geniux is my idiom name given by my collegues as they believe I'm creative and multitalented. "I'm just interested in many things."
 I am cut above the rest because of my passion for the ICT industry and I believe that where passion leads, success is guranteed.   
 Accademically, I chose to 
