--- a/Specialize-web-developers-online-coder-15-html-iframes.html
+++ b/Specialize-web-developers-online-coder-15-html-iframes.html
@@ -15,7 +15,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 <div class="container">
-  <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo"></a>
+  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -188,7 +188,7 @@ Most of the attributes of the &lt;iframe&gt; tag, including <i>name, class, fram
 <div>
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">About me</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-My name is Evidence Maphutha, I am a young aspirant <i>Front-End Developer,</i> alternatively as well as an <i>IT Support.</i><br/>
+My name is Evidence Maphutha, I am a young aspirant <i>Front-End Developer,</i> as well as an <i>IT Support Technician.</i><br/>
 Evil Geniux is my idiom name given by my collegues as they believe I'm creative and multitalented. "I'm just interested in many things."
 I am cut above the rest because of my passion for the ICT industry and I believe that where passion leads, success is guranteed.   
 Accademically, I chose to 
