--- a/category-desktop-support-utility-tools.html
+++ b/category-desktop-support-utility-tools.html
@@ -15,7 +15,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 <div class="container">
-  <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo"></a><span class="logoname">EVIL GENIUS</span>
+  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">EVIL GENIUS</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,7 +23,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
         <a class="nav-link" href="#categories">Download Center</a>
@@ -1834,7 +1834,7 @@ Notepad ++ 32/64bit:
 <div>
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">About me</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-My name is Evidence Maphutha, I am a young aspirant <i>Front-End Developer,</i> alternatively as well as an <i>IT Support.</i><br/>
+My name is Evidence Maphutha, I am a young aspirant <i>Front-End Developer,</i> as well as an <i>IT Support Technician.</i><br/>
 Evil Geniux is my idiom name given by my collegues as they believe I'm creative and multitalented. "I'm just interested in many things."
 I am cut above the rest because of my passion for the ICT industry and I believe that where passion leads, success is guranteed.   
 Accademically, I chose to 
