Added new Device

--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -431,6 +431,59 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 
 
 
+<div class="col-sm-4">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="imgBx">
+<img src="images/device-images/Nokia 1 EvilGeniux-Hardreset-hang-on-logo.png" class="img-fluid">
+</div>
+<div class="content">
+
+
+<h3>Nokia 1<br><span><a href="#myModal177" class="openModal">Logo stuck/Hard-reset</a></span></h3>
+</div>
+</div>
+</div>
+<div id="myModal177" class="modal">
+    <div class="modal-content">
+    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+	<div class="modal-body">
+	<center><img src="images/desktop-images/Nokia 1 Hang on Logo, Pattern Lock.png" width="40%" class="img-modal"></center><br/>
+    <p class="modal-h">How to Fix Nokia 1 "hanging on Logo" /Hard Reset/Pattern Lock</p>
+    <p class="modal-p">
+Is your Android Smartphone slow, freezing, not responsive, hanging on logo, or you can’t remember the phones password? You’re in luck! There is still a pretty powerful option available, and that is to perform a hard reset, also known as an alternate reset, on the device.
+<BR/><BR/>
+Before we begin… If you are still able to access the setting on your device and navigate the phone then you might be more interested in reading How to backup and reset an Android phone, which goes through the process of doing a full backup and then performing a Factory Data Reset through the phones settings.
+<BR/><BR/>
+
+To boot into recovery mode, make sure that the device is powered off, then follow these instructions:<BR/>
+1. Turn off the phone<BR/>
+2. Connect usb cable and Press and hold the power button and Volume Up button for 3 seconds<BR/>
+3. Then immediately the logo pop up, depress power button and keep holding both Volume Up key until the Android system recover screen appears. <BR/>
+4. Use the Volume Down key to highlight the “wipe data/factory reset” option and then use the Power button to make the selection.<BR/>
+5. Done <BR/>
+
+
+
+
+
+
+
+<BR/><BR/>
+DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
+<BR/>Go to myTutorial for guidance: <a href="https://youtu.be/A5pgSv1F76A" target="_blank"><i class="fa fa-youtube-play"></i></a>
+		<br/><br>
+<b>Terms of Service</b><br/>
+<ul>
+<li>No Hacking - No Carding Tools - No Spams</li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li>Dont forget to support Evil Genius!</li>
+</ul>
+
+</p>
+	 </div>
+	 <div class="modal-footer"><h3>End of the article</h3></div>
+	 </div>
+</div>
 
 
 
@@ -453,7 +506,10 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 
 <br/><br/>
 
+
+
 </div>
+
 </section>
 <section class="sec2" id="me">
 <div class="container h100">
