--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -502,21 +502,21 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <img src="images/device-images/Hurricane-vegas-theevilgeniux.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Hurricane Vegas<br><span><a href="#myModal2224" class="openModal">FRP Remove </a></span></h3>
+<h3>Hurricane Vegas<br><span><a href="#myModal229" class="openModal">FRP Remove </a></span></h3>
 </div>
 </div>
 </div>
-<div id="myModal2224" class="modal">
+<div id="myModal229" class="modal">
     <div class="modal-content">
     <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/hurricane vegas-theevilgeniux.jpg" width="40%" class="img-modal"></center><br/>
-    <p class="modal-h">Remove Previous Google Account on Mobicel Trendy</p>
+    <p class="modal-h">Remove Previous Google Account on Hurricane Vegas</p>
     <p class="modal-p">I'm going to show you how you can remove Google Factory Reset Protection on Android 6.0 | No PC,No OTG. This Happens a lot if you have tried to hard-reset your mobile with combination keys.
 <BR/><BR/>Follow my steps carefully in order to succeed. 
 <BR/><BR/>
 DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
-<BR/>Go to myTutorial: <a href="https://youtu.be/MUxRzkgtqyA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+<BR/>Go to myTutorial: <a href="https://youtu.be/GB6I_grJdIw" target="_blank"><i class="fa fa-youtube-play"></i></a>
 
 		<br/><br>
 <b>Terms of Service</b><br/>
