added new device

--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -532,7 +532,41 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 	 </div>
 </div>
 
+<div class="col-sm-4">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="imgBx">
+<img src="images/device-images/CAG-L02.png" class="img-fluid">
+</div>
+<div class="content">
+<h3>Huawei Y3 2018<br><span><a href="#myModal289" class="openModal">FRP Remove </a></span></h3>
+</div>
+</div>
+</div>
+<div id="myModal289" class="modal">
+    <div class="modal-content">
+    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+	<div class="modal-body">
+	<center><img src="images/device-images/Huawei Y3 2018CAG-L02.jpg" width="40%" class="img-modal"></center><br/>
+    <p class="modal-h">Remove Previous Google Account on Huawei Y3 CAG-L22 / CAG-L02</p>
+    <p class="modal-p">I'm going to show you how you can remove Google Factory Reset Protection on Android 8.1.0 | No PC,No OTG. This Happens a lot if you have tried to hard-reset your mobile with combination keys.
+<BR/><BR/>Follow my steps carefully in order to succeed. 
+<BR/><BR/>
+DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
+<BR/>Go to myTutorial: <a href="https://youtu.be/1YSuVgSJf_0" target="_blank"><i class="fa fa-youtube-play"></i></a>
 
+		<br/><br>
+<b>Terms of Service</b><br/>
+<ul>
+<li>No Hacking - No Carding Tools - No Spams</li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li>Dont forget to support Evil Genius!</li>
+</ul>
+</p>
+	
+	 </div>
+	 <div class="modal-footer"><h3>End of the article</h3></div>
+	 </div>
+</div>
 
 
 
