new tutorial is added

--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -608,6 +608,122 @@ Having problems with your DirectX setup? We provide DirectX offline installers f
 	  <div class="modal-footer"><h3>End of the article</h3></div>
 	  </div>
 </div>
+
+
+
+<div class="col-sm-6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="blogpost">
+<div class="imgBx">
+<img src="images/desktop-images/SentFriendRequests-evilgeniux.jpg" class="img-fluid">
+</div>
+<div class="content">
+<h1>Tweak: Cancel All Sent Friend Requests on Facebook(One-Click) </h1>
+<p>NB: For Educational Purpose. I will be showing you How to Cancel/Remove All Sent...</p>
+<button class="btn btnD2" href="#myModal203">Read More</button>
+<div class="clearfix"></div>
+</div>
+</div>
+</div> 
+<div id="myModal203" class="modal">
+    <div class="modal-content">
+	<div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+      <div class="modal-body">
+	  <center><img src="images/desktop-images/SentFriendRequests-evilgeniux.jpg" width="40%" class="img-modal"></center>
+	  <p class="modal-h"><br/>Tweak: Cancel All Sent Friend Requests on Facebook</p>
+      <p class="modal-p">
+I will be showing you How to Cancel/Remove All Sent Friend Requests on Facebook Once with just a single click. This method is safe.<br/>
+NB: For Educational Purpose<br/><br/>
+0. Open your Chrome/Firefox.<br/>
+1. Download the codes here: <a href="https://mega.nz/#!xUBykAbC!5jTUPjWxKd0xjvV3tropwniDpq16sw3vnHh6QF_yxTo" target="_blank">Download</a><br/>
+2. View your Sent Requests here: <a href="https://m.facebook.com/friends/center/requests/outgoing/#friends_center_main" target="_blank">Facebook Sent Requests </a> <br/>
+3. Right Click and Inspect Element.<br/>
+4. Open Console Tab<br/>
+5. Paste the codes and Press Enter<br/>
+
+
+	  <br/><br/>
+	 
+	Open myTutorial for installation guides: <a href="https://youtu.be/xaIbItD4f1A" target="_blank"><i class="fa fa-youtube-play"></i></a>
+			<br/><br>
+<b>Terms of Service</b><br/>
+<ul>
+<li>No Hacking - No Carding Tools - No Spams</li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li>Dont forget to support Evil Genius!</li>
+</ul></p>
+
+	  </div>
+	  <div class="modal-footer"><h3>End of the article</h3></div>
+	  </div>
+</div>
+
+</div>
+<!-----------------------------------END OF TWO ROWS----------------------------------------->
+
+
+<!-----------------------------------TWO ROWS----------------------------------------->
+<div class="row">
+
+
+
+<div class="col-sm-6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="blogpost">
+<div class="imgBx">
+<img src="images/desktop-images/InviteAllFriends-Evil-Geniux.jpg" class="img-fluid">
+</div>
+<div class="content">
+<h1>Trick: Invite All Friends on Facebook(One-Click) </h1>
+<p>NB: For Educational Purpose. I will be showing you How to Invite All Friends on Facebook with just a single click...</p>
+<button class="btn btnD2" href="#myModal2103">Read More</button>
+<div class="clearfix"></div>
+</div>
+</div>
+</div> 
+<div id="myModal2103" class="modal">
+    <div class="modal-content">
+	<div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+      <div class="modal-body">
+	  <center><img src="images/desktop-images/InviteAllFriends-Evil-Geniux.jpg" width="40%" class="img-modal"></center>
+	  <p class="modal-h"><br/>Tweak: Cancel All Sent Friend Requests on Facebook</p>
+      <p class="modal-p">
+I will be showing you How to Invite All Friends on Facebook Once with just a single click. This method is safe.<br/>
+NB: For Educational Purpose<br/><br/>
+0. Open your Chrome/Firefox <br/>
+1. Download the codes here: <a href="https://mega.nz/#!BQ5AzKoD!HtfqqUsLS-u_VSrYIcsi6Ah4kLZdnIZpwC4dnVGezbY" target="_blank">Download</a><br/>
+2. Open Friends Suggestions tab on Facebook.
+3. Right Click and Inspect Element.<br/>
+4. Open Console Tab<br/>
+5. Paste the codes and Press Enter<br/>
+
+	  <br/><br/>
+	 
+	Open myTutorial for installation guides: <a href="https://youtu.be/CmTqp9ctViU" target="_blank"><i class="fa fa-youtube-play"></i></a>
+			<br/><br>
+<b>Terms of Service</b><br/>
+<ul>
+<li>No Hacking - No Carding Tools - No Spams</li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li>Dont forget to support Evil Genius!</li>
+</ul></p>
+
+	  </div>
+	  <div class="modal-footer"><h3>End of the article</h3></div>
+	  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 <!-----------------------------------END OF TWO ROWS----------------------------------------->
 
