--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -684,7 +684,7 @@ NB: For Educational Purpose<br/><br/>
 	<div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
       <div class="modal-body">
 	  <center><img src="images/desktop-images/InviteAllFriends-Evil-Geniux.jpg" width="40%" class="img-modal"></center>
-	  <p class="modal-h"><br/>Tweak: Cancel All Sent Friend Requests on Facebook</p>
+	  <p class="modal-h"><br/>How To Invite All Friends on Facebook At Once (One-Click)</p>
       <p class="modal-p">
 I will be showing you How to Invite All Friends on Facebook Once with just a single click. This method is safe.<br/>
 NB: For Educational Purpose<br/><br/>
