--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -690,7 +690,7 @@ I will be showing you How to Invite All Friends on Facebook Once with just a sin
 NB: For Educational Purpose<br/><br/>
 0. Open your Chrome/Firefox <br/>
 1. Download the codes here: <a href="https://mega.nz/#!BQ5AzKoD!HtfqqUsLS-u_VSrYIcsi6Ah4kLZdnIZpwC4dnVGezbY" target="_blank">Download</a><br/>
-2. Open Friends Suggestions tab on Facebook.
+2. Open Friends Suggestions tab on Facebook.<br/>
 3. Right Click and Inspect Element.<br/>
 4. Open Console Tab<br/>
 5. Paste the codes and Press Enter<br/>
