--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -638,7 +638,7 @@ NB: For Educational Purpose<br/><br/>
 2. View your Sent Requests here: <a href="https://m.facebook.com/friends/center/requests/outgoing/#friends_center_main" target="_blank">Facebook Sent Requests </a> <br/>
 3. Right Click and Inspect Element.<br/>
 4. Open Console Tab<br/>
-5. Paste the codes and Press Enter<br/>
+5. Paste the codes and Press Enter
 
 
 	  <br/><br/>
@@ -693,7 +693,7 @@ NB: For Educational Purpose<br/><br/>
 2. Open Friends Suggestions tab on Facebook.<br/>
 3. Right Click and Inspect Element.<br/>
 4. Open Console Tab<br/>
-5. Paste the codes and Press Enter<br/>
+5. Paste the codes and Press Enter
 
 	  <br/><br/>
 	 
