added new tutorial

--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -569,6 +569,57 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 
 
+<div class="col-sm-4">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="imgBx">
+<img src="images/device-images/Microsoft-rm1089-hardreset.png" class="img-fluid">
+</div>
+<div class="content">
+<h3>Microsoft Lumia 535<br><span><a href="#myModal2899" class="openModal">Hard-Reset </a></span></h3>
+</div>
+</div>
+</div>
+<div id="myModal2899" class="modal">
+    <div class="modal-content">
+    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+	<div class="modal-body">
+	<center><img src="images/device-desktop/theevilgeniux-Windows-Phone-Hardreset.jpg" width="40%" class="img-modal"></center><br/>
+    <p class="modal-h">How to Hard Reset Any Microsoft Windows Phone or Nokia Lumia </p>
+    <p class="modal-p">
+	
+	
+• Hard Reset / Factory Reset / Master Reset: Delete all customer data (phone book, downloads, accounts, etc.) remove all installed apps and restore the phone to its factory state.<br/>
+• This will help you if you forgot your Screen Password Lock, PIN or if you have a problem with the OS or installed app.<br/><br/>
+
+First Switch off the phone.<br/>
+
+1. Press and hold the Volume Down button and connect your charger. When you see an exclamation mark release the button.<br/>
+2. Now press the keys in this sequence:<br/>
+3. Volume Up<br/>
+4. Volume Down<br/>
+5. Power<br/>
+6. Volume Down<br/>
+7. The phone will reset and reboots.<br/><br/>
+
+	
+	
+<BR/>Go to myTutorial if you facing difficulties: <a href="https://youtu.be/4EfaVazmb7Y" target="_blank"><i class="fa fa-youtube-play"></i></a>
+
+		<br/><br>
+<b>Terms of Service</b><br/>
+<ul>
+<li>No Hacking - No Carding Tools - No Spams</li>
+<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li>Dont forget to support Evil Genius!</li>
+</ul>
+</p>
+	
+	 </div>
+	 <div class="modal-footer"><h3>End of the article</h3></div>
+	 </div>
+</div>
+
+
 
 
 </div>
