--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -78,7 +78,7 @@
 </div>
 <div id="myModal1" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/samsung j500f.jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Remove Samsung J500F Previous Google Account </p><br/>
@@ -116,7 +116,7 @@
 </div>
 <div id="myModal2" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/Vodafone_VF200_Gollum.png" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Remove Previous Google Account on Vodafone VFD 200 </p>
@@ -158,7 +158,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal3" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/samsung-a6-tab-1.jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Remove Previous Google Account on Samsung A6 Tab 7(2016) </p>
@@ -195,7 +195,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal4" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/mobicel trendy-0.jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Remove Previous Google Account on Mobicel Trendy</p>
@@ -236,7 +236,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal16" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/How To Hard-Reset Wipe Data on Huawei Y511 U30 .jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">How to Hard Reset Huawei Y511-U30</p>
@@ -299,7 +299,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal5" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/Z3 .jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Solved: Blackberry Z3 stuck on finalizing device setup WiFi screen/Showing exclamation mark</p>
@@ -344,7 +344,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal222" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/j260f frp bypass.jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Remove Previous Google Account on Samsung J2 Core</p>
@@ -394,7 +394,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal232" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/theevilgenix-huawei-p20.jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Remove Previous Google Account on Huawei P20 lite</p>
@@ -445,7 +445,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal177" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/desktop-images/Nokia 1 Hang on Logo, Pattern Lock.png" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">How to Fix Nokia 1 "hanging on Logo" /Hard Reset/Pattern Lock</p>
@@ -508,7 +508,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal229" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/hurricane vegas-theevilgeniux.jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Remove Previous Google Account on Hurricane Vegas</p>
@@ -544,7 +544,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal289" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/device-images/Huawei Y3 2018CAG-L02.jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Remove Previous Google Account on Huawei Y3 CAG-L22 / CAG-L02</p>
@@ -581,7 +581,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 </div>
 <div id="myModal2899" class="modal">
     <div class="modal-content">
-    <div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
+    <div class="modal-header"><h2>Tutorial</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
 	<center><img src="images/desktop-images/theevilgeniux-Windows-Phone-Hardreset.jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">How to Hard Reset Any Microsoft Windows Phone or Nokia Lumia </p>
