--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -599,7 +599,7 @@ First Switch off the phone.<br/>
 4. Volume Down<br/>
 5. Power<br/>
 6. Volume Down<br/>
-7. The phone will reset and reboots.<br/><br/>
+7. The phone will reset and reboots.<br/>
 
 	
 	
