--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -72,7 +72,7 @@
 <div class="content">
 
 
-<h3>Samsung J500F<br><span><a href="#myModal1" class="openModal">FRP Remove(6.0.1) </a></span></h3>
+<h3>Samsung J5<br><span><a href="#myModal1" class="openModal">FRP Remove</a></span></h3>
 </div>
 </div>
 </div>
