--- a/lets-connect-my-social-medias.html
+++ b/lets-connect-my-social-medias.html
@@ -45,7 +45,7 @@
   <div class="contentBox h100">
   <div>
   <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Let's Connect</h1>
-  <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Teamwork makes dreams work. </i></p>
+  <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Teamwork makes dreams work. Let's synergize </i></p>
     </div>
 </div>
 </div>
